--- a/main.css
+++ b/main.css
@@ -1,14 +1,20 @@
 header{
 
-}
+
+background-color: aqua;}
+
 img{
-    max-width: 50%;
-    max-height: 50%;
-
+    max-height: 30%;
+    max-width: 30%;  
 }
 
-head{
+header{
     margin: 0;
     padding: 0;
-
+display: flex; flex-direction: row;
+justify-content: center;
+align-items: center;
+}
+div{
+    display: flex; flex-direction: column;
 }
